src/objects/FieloPLT__Agreement__c.object
<CustomObject>
    <description>Terms and conditions of service that Members need to accept in order to be part of the loyalty Program in which you wish to include them.</description>
    <fields>
        <fullName>FieloPLT__Agreement__c</fullName>
        <description>Agreement terms and conditions.</description>
        <inlineHelpText>Enter the Agreement terms and conditions.</inlineHelpText>
        <label>Agreement</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program which the Agreement belongs to.</description>
        <inlineHelpText>Choose Program which the Agreement belongs to.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <description>Agreement status: Draft, Current, Active or Deprecated.</description>
        <inlineHelpText>Agreement status. Only one Agreement be active.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deprecated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Program__c</columns>
        <columns>FieloPLT__Agreement__c</columns>
        <columns>FieloPLT__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Agreements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Version</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>FieloPLT__Active</fullName>
        <active>true</active>
        <description>The Agreement status is Active.</description>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Draft</fullName>
        <active>true</active>
        <description>The Agreement status is Draft.</description>
        <label>Draft</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ModifyProgram</fullName>
        <active>true</active>
        <description>The related Program cannot be modified.</description>
        <errorConditionFormula>ISCHANGED(FieloPLT__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloPLT__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloPLT__Program__c</errorDisplayField>
        <errorMessage>The related Program cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>